--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ url: "https://lidraughts.org/"  # Lidraughts base URL.
 
 engine:                      # Engine settings.
   dir: "./engines/"          # Directory containing the engine. This can be an absolute path or one relative to lidraughts-bot/.
-  name: "engine_name"        # Binary name of the engine to use.
+  name: "fairy"        # Binary name of the engine to use.
   engine_argument: "hub"
   working_dir: "./engines/"  # Directory where the draughts engine will read and write files. If blank or missing, the current directory is used.
   protocol: "hub"            # "hub", "dxp", "cb" (checkerboard) or "homemade"
